# cc-buddy

./: .gitignore  README.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AsciiSprite.tsx  Buddy.tsx  Hearts.tsx  SpeechBubble.tsx  Sprite.tsx
src/hooks/: useBuddyBehavior.ts  useBuddyConfig.ts  useDragWindow.ts  usePetting.ts  useSpriteStyle.ts
src/lib/: ascii-sprites.ts  messages.ts  states.ts
